# pgn-parser

./: Dockerfile  README.md  build.gradle.kts  gradle.properties  pyproject.toml
src/main/kotlin/com/henrycourse/: App.kt
src/main/resources/: logback.xml
src/python/: main.ipynb
tests/: test_chesss.py
