[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["hcourse-nydig <henry.course@nydig.com>"]

[tool.poetry.dependencies]
python = "~3.9"
jupyterlab = "^3.2.4"
numpy = "^1.21.4"
scipy = "^1.7.3"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
